[project]
name = "wasabi-mcp"
version = "0.3.0"
description = "MCP server for Wasabi S3 and IAM operations with local search index"
readme = "README.md"
authors = [
    { name = "myst3k", email = "chris@ph4te.net" }
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0,<2.0.0",
    "boto3>=1.35.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
wasabi-mcp = "wasabi_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
